tests/org.eclipse.php.core.tests/workspace/errors/php54/testUndefinedVariable3.pdtt
--TEST--
Test undefined with varComment
--FILE--
<?php
/* @var string $var1 */
 echo $var1, $var2;
?>
--EXPECT--
[line=3, start=43, end=48] Variable '$var2' is undefined